--- a/styles/main.css
+++ b/styles/main.css
@@ -182,6 +182,9 @@ p {
   width: 100%;
   max-width: 400px;
 }
+.main .display .display-content img {
+  height: 80px;
+}
 .main .display .display-content h2 {
   font-size: 19px;
 }
@@ -268,4 +271,56 @@ p {
   border: none;
   border-radius: 26px;
   width: 100%;
+}
+
+footer {
+  background-color: hsl(216, 53%, 9%);
+  padding: 50px 0;
+}
+footer .logo img {
+  height: 34px;
+}
+footer .links a {
+  color: hsl(0, 0%, 75%);
+}
+footer .links a:hover {
+  color: hsl(0, 0%, 100%);
+  text-decoration: none;
+}
+footer .round-icon {
+  border-radius: 50%;
+  font-size: 16px;
+  height: 35px;
+  width: 35px;
+  color: white;
+  border: 1px solid white;
+}
+footer .round-icon:not(:last-child) {
+  margin-right: 9px;
+}
+footer .round-icon:hover {
+  border-color: hsl(198, 60%, 50%);
+  color: hsl(198, 60%, 50%);
+  text-decoration: none;
+}
+
+.curve {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: translateY(-100%);
+}
+
+.curve img {
+  position: relative;
+  display: block;
+  width: calc(103% + 1.3px);
+  transform: scaleY(1);
+}
+
+.curve {
+  fill: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
